kubernetes/examples/simple-nginx/internal/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: example-nginx-internal
  labels:
    kubernetes.io/metadata.name: example-nginx-internal
    istio.io/rev: asm-managed-stable # GKE Anthos Service Mesh
