kubernetes/examples/simple-nginx/internal/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: example-nginx-internal
  annotations:
    cloud.google.com/neg: '{"ingress": true}' # Creates a NEG after an Ingress is created
spec:
  type: NodePort
  selector:
    app: example-nginx-internal
  ports:
    - protocol: TCP
      port: 80
